2005-01-28  Michael Albinus  <michael.albinus@gmx.de>

	* INSTALL: Linux configure option prefix should be
	"--prefix=/usr".  Reported by Bradley Dilger <dilger@wrecking.org>.

	* configure.ac: Bump version (to 2.1.4-pre).  Change bug report
	address to [tramp-devel@gnu.org].

2005-01-16  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (savannah): Revert change from 2004-10-10.  It
	doesn't work.

	Version 2.1.3 released.

	* configure.ac: Bump version.

2004-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* aclocal.m4, configure.ac: grep(1) on OpenBSD 3.6 does not
	understand the '-' option.  Small change.  From Ryan Yeske
	<rcyeske@gmail.com>.

2004-10-17  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.XEmacs, package-info.in: Synchronize with XEmacs CVS
	repository.

2004-10-10  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (savannah): Don't apply "configure" for Japanese
	manual, but call "make -C texi" with proper variable settings.

	* aclocal.m4 (AC_EMACS_INFO): Write default values in help output
	for "--with-xemacs" and "--with-emacs".
	(AC_PATH_LISPDIR): Write default value in help output for
	"--with-lispdir".
	(all): Unify capitalization for help output.

	* configure.ac: Bump version (to 2.1.3-pre).
	
2004-09-19  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.2 released.

	* INSTALL: Mention useful configure option "--prefix=/usr/share"
	for Linux systems.  Reported by Charles Curley
	<charlescurley@charlescurley.com>.

	* Makefile.in (XEMACS_FILES): New variable.
	(emacs): Use "cvs -f diff" in order to suppress "~/.cvsrc".  There
	might be conflicting options else.
	(xemacs): Reworked.  Same philosophy as `emacs' now.

	* configure.ac: Bump version.

2004-09-16  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (AUTOCONF): New variable.
	(configure): Apply it.  Reported by Norbert Koch
	<viteno@xemacs.org> in order to have a simple possibility applying
	autoconf under another name.
