@@ -98,13 +98,20 @@ If your installed copy of @value{emacsname} is named something other than
 @option{@value{emacsdir}}, you will need to tell `make' where to find it so
 that it can correctly byte-compile the @value{tramp} sources.
 
+@noindent
 For example, to force the use of @value{emacsothername} you might do
 this:
 
 @example
 ./configure --with-@value{emacsotherdir}
-make
-make install
+@end example
+
+@noindent
+You can even pass the @value{emacsname} or @value{emacsothername}
+command to be called:
+
+@example
+./configure --with-@value{emacsotherdir}=@value{emacsotherdir}21
 @end example
 
 The syntax of @value{tramp} file names is different for @value{emacsname}
@@ -119,17 +126,14 @@ make EMACS_INFO=@value{emacsotherdir}
 @end example
 
 Also, the @option{--prefix=PATH} option to @command{configure} may
-not be general enough to set the paths you want.  If not, you can pass
-variables to the @command{make} command to control the installation.
-For a complete list of tweakable variables, look in the makefile.
+not be general enough to set the paths you want.  If not, you can declare the
+directories Lisp and Info files should be installed.
 
 For example, to put the Lisp files in @file{~/elisp} and the Info file
 in @file{~/info}, you would type:
 
 @example
-./configure
-make
-make lispdir=~/elisp infodir=~/info install
+./configure --with-lispdir=$HOME/elisp --infodir=$HOME/info
 @end example
 
 Running @command{configure} might result in errors or warnings.  The
