@@ -1,3 +1,7 @@
+2005-02-05  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (all): Change all addresses to .gnu.org.
+
 2005-01-16  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.1.3 released.
